--- a/pom.xml
+++ b/pom.xml
@@ -21,7 +21,7 @@
     </dependencies>
     
   <build>
-    <finalName>springboot-demo</finalName>
+    <finalName>demo</finalName>
     <plugins>
             <plugin>
                 <groupId>org.springframework.boot</groupId>
